Tue Feb  2 17:26:06 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.h, htdig/PDF.cc: Fix problems with PDFs generated by
	CorelDraw.

Tue Feb  2 21:02:25 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htsearch/Display.cc(setVariables,createURL): As pointed out by
	Gilles, append allow_in_form variables to the query strings only
	if they are given as input parameters.

Tue Feb  2 10:29:09 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure, configure.in: Rewrite getpeername_length_t detection
	to use prototypes to eliminate type conversion.

	* htsearch/Display.cc(buildMatchList): Ensure scores are always
	positive or zero.
	
Mon Feb  1 22:54:02 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htdoc/attrs.html: Correct "default" for "nothing_found_file".

Mon Feb  1 14:44:32 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(displayMatch): Remove compiler warnings.

	* */Makefile.in: Define INSTALL_PROGRAM from configure script.
	
Mon Feb  1 14:04:18 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: Add checks to prevent wayward parsers
	from bringing down the dig.

Sun Jan 31 23:15:36 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/WeightWord.cc(set): Ensure word is lowercased for
	accurate fuzzy comparisons.

	* htfuzzy/Fuzzy.cc(openIndex): Destroy the database reference if
	we cannot open the database. Fixes a coredump in classes that
	inherit this method.

	* Makefile.config.in: Remove bogus definitions of INSTALL.

	* Makefile.in: Define INSTALL, INSTALL_PROGRAM, INSTALL_SCRIPT,
	and INSSTALL_DATA as defined by configure. Use them.

	* htdoc/RELEASE.html: Started release notes for version 3.1.0.
	
Mon Feb  1 04:36:29 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htsearch/Display.cc (displayMatch): Fix leaking user of
	String(String *).
	* htfuzzy/Prefix.cc (getWords): Ditto.

	* htlib/htString.h, htlib/String.cc (String(const String &)): New.