@@ -1,3 +1,8 @@
+Wed Feb  3 14:22:11 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>
+
+	* htsearch/Display.cc(setVariables): Removed some of yesterdays
+	changes. Thanks to Gilles!
+
 Tue Feb  2 17:26:06 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>
 
 	* htdig/PDF.h, htdig/PDF.cc: Fix problems with PDFs generated by
